# memory-sdk

./: .env.example  .gitignore  CLAUDE.md  main.py  pyproject.toml
.claude/: settings.json
docs/: AGENTS.md  Memory_System_Implementation_Blueprint.md
src/memory_sdk/: __init__.py  config.py  schemas.py
src/memory_sdk/storage/: base.py
