[project]
name = "memory-sdk"
version = "0.1.0"
description = "Two-Brain autonomous agent memory SDK"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memory_sdk"]

[dependency-groups]
dev = []
